# ProximityForest2.0

./: .gitignore  CMakeLists.txt  DEVNOTES.md  Project.xml  README.md  devnotes.md
exec/testlibs/: CMakeLists.txt  testlibs.cpp
libtempo/: CMakeLists.txt  concepts.hpp
libtempo/_cmake/: dummy.cpp  project_options.cmake
libtempo/_test/: CMakeLists.txt
libtempo/_test/mock/: mockseries.hpp
libtempo/classifier/: CMakeLists.txt
libtempo/classifier/proximity_forest/: ipf.hpp  isplitters.hpp  pf2018.hpp  pftree.hpp  splitters.hpp
libtempo/classifier/proximity_forest/splitters/: distance_splitters.hpp
libtempo/classifier/splitting_forest/: ipf.hpp  pftree.hpp  splitters.hpp
libtempo/classifier/splitting_forest/proximity_forest/: distance_splitters.hpp  pf2018.hpp
libtempo/cmake/: dummy.cpp  project_options.cmake
libtempo/distance/: CMakeLists.txt  adtw.hpp  cdtw.hpp  cost_function.hpp  direct.hpp  distance.hpp  dtw.hpp  erp.hpp  lcss.hpp  msm.hpp  twe.hpp  wdtw.hpp
libtempo/distance/test/multivariate_dep/: m_adtw.cpp  m_cdtw.cpp  m_direct.cpp  m_dtw.cpp  m_dtw_full.cpp  m_erp.cpp  m_lcss.cpp  m_msm.cpp  m_twe.cpp  m_wdtw.cpp
libtempo/distance/test/univariate/: adtw.cpp  cdtw.cpp  direct.cpp  dtw.cpp  dtw_full.cpp  erp.cpp  lcss.cpp  msm.cpp  twe.cpp  wdtw.cpp
libtempo/include/libtempo/distance/: cdtw.hpp  direct.hpp  distance.hpp  dtw.hpp  erp.hpp  lcss.hpp  msm.hpp  norm.hpp  twe.hpp  wdtw.hpp
libtempo/include/libtempo/tseries/: tseries.hpp
libtempo/include/libtempo/utils/: capsule.hpp  point.hpp  utils.hpp
libtempo/reader/: CMakeLists.txt  readingtools.hpp  readintools.hpp
libtempo/reader/ts/: ts.cpp  ts.hpp
libtempo/test/: CMakeLists.txt
libtempo/test/distance/multivariate_dep/: m_cdtw.cpp  m_dtw.cpp  m_erp.cpp  m_lcss.cpp  m_msm.cpp  m_norm.cpp  m_twe.cpp  m_wdtw.cpp
libtempo/test/distance/univariate/: adtw.cpp  cdtw.cpp  direct.cpp  dtw.cpp  erp.cpp  lcss.cpp  msm.cpp  norm.cpp  twe.cpp  wdtw.cpp
libtempo/test/mock/: mockseries.hpp
libtempo/transform/: CMakeLists.txt  derivative.hpp
libtempo/tseries/: CMakeLists.txt  dataset.hpp  tseries.hpp
libtempo/utils/: CMakeLists.txt  capsule.hpp  jsonvalue.hpp  partasks.hpp  progressmonitor.hpp  stats.hpp  timing.hpp  utils.cpp  utils.hpp
src/tempo/: CMakeLists.txt  pch_lib.hpp  pch_std.hpp  predef.hpp
src/tempo/classifier/: CMakeLists.txt  utils.hpp
src/tempo/classifier/PF2-F/: CMakeLists.txt  pf2f.hpp
src/tempo/classifier/PF2018/: pf2018.hpp
src/tempo/classifier/ProximityForest/: CMakeLists.txt  pf2018.hpp  pf_pimpl.cpp
src/tempo/classifier/SForest/: CMakeLists.txt  sforest.hpp  stree.hpp
src/tempo/classifier/SForest/leaf/: pure_leaf.hpp
src/tempo/classifier/TSChief/: CMakeLists.txt  forest.cpp  forest.hpp  pfsplitters.cpp  splitter_interface.hpp  tree.cpp  tree.hpp  treedata.hpp  treestate.cpp  treestate.hpp
src/tempo/classifier/TSChief/sleaf/: CMakeLists.txt  pure_leaf.hpp  pure_leaf_smoothp.hpp
src/tempo/classifier/loocv/: distobj.hpp
src/tempo/classifier/loocv/fastmps/: CMakeLists.txt  fastmps.hpp  search_table.hpp
src/tempo/classifier/loocv/partable/: CMakeLists.txt  partable.cpp  partable.hpp
src/tempo/classifier/sfdyn/: CMakeLists.txt  stree.hpp  stree_trained.hpp
src/tempo/classifier/speedy/: CMakeLists.txt  fastmph.cpp
src/tempo/classifier/splitting_forest/: CMakeLists.txt  ipf.hpp  pftree.hpp  splitters.hpp
src/tempo/classifier/splitting_forest/proximity_forest/: distance_splitters.hpp  pf2018.cpp  pf2018.hpp  pf2018_impl.hpp  proximity_forest.hpp
src/tempo/dataset/: CMakeLists.txt  dataset.hpp  datastore.hpp  dts.hpp  label_encoder.hpp  tseries.hpp
src/tempo/distance/: CMakeLists.txt  adtw.hpp  cost_function.hpp  cost_functions.hpp  direct.hpp  dtw.hpp  erp.hpp  helpers.hpp  lcss.hpp  msm.hpp  tseries.univariate.hpp  twe.hpp  univariate.cpp  univariate.hpp  univariate.private.hpp  wdtw.hpp
src/tempo/distance/core/: CMakeLists.txt
src/tempo/distance/core/elastic/: adtw.hpp  adtw.test.univariate.cpp  dtw.hpp  dtw.test.univariate.cpp  dtw_lb_enhanced.hpp  dtw_lb_keogh.hpp  dtw_lb_webb.hpp  erp.hpp  erp.test.univariate.cpp  lcss.hpp  lcss.test.univariate.cpp  msm.hpp  msm.test.univariate.cpp  softdtw.hpp  twe.hpp  twe.test.univariate.cpp  wdtw.hpp  wdtw.test.univariate.cpp
src/tempo/distance/core/lockstep/: direct.hpp  direct.test.cpp  lockstep.univariate.hpp
src/tempo/distance/core/sliding/: cross_correlation.univariate.hpp
src/tempo/distance/elastic/: adtw.hpp  dtw.hpp  erp.hpp  lcss.hpp  msm.hpp  twe.hpp  wdtw.hpp
src/tempo/distance/lockstep/: direct.hpp  lockstep.cpp  lockstep.hpp  lorentzian.hpp  manhattan.hpp  minkowski.hpp
src/tempo/distance/sliding/: cross_correlation.hpp
src/tempo/distance/test/multivariate_dep/: m_adtw.cpp  m_direct.cpp  (+7 more)
src/tempo/distance__/: CMakeLists.txt  helpers.hpp
src/tempo/distance__/elastic/: adtw.hpp  dtw.hpp  erp.hpp  lcss.hpp  twe.hpp  wdtw.hpp
src/tempo/distance__/lockstep/: direct.hpp
src/tempo/distance_back_for_multivariate/: helpers.hpp
src/tempo/distance_back_for_multivariate/elastic/: msm.hpp
src/tempo/reader/: CMakeLists.txt  dts.reader.cpp  dts.reader.hpp  new_reader.hpp  reader.cpp  reader.hpp  reader_result.hpp  readingtools.hpp
src/tempo/reader/csv/: CMakeLists.txt  csv.cpp  csv.hpp  csv.test.cpp  test.csv
src/tempo/reader/ts/: ts.cpp  ts.hpp
src/tempo/transform/: CMakeLists.txt  derivative.hpp  normalization.cpp  normalization.hpp  tseries.univariate.cpp  tseries.univariate.hpp  univariate.cpp  univariate.hpp  univariate.private.hpp
src/tempo/transform/core/: CMakeLists.txt  univariate.derivative.hpp  univariate.derivative.test.cpp  univariate.frequency.hpp  univariate.hydra.hpp  univariate.noise.hpp  univariate.normalization.hpp
src/tempo/transform__/: CMakeLists.txt  derivative.hpp  normalization.cpp  normalization.hpp
src/tempo/tseries/: CMakeLists.txt  dataset.hpp  tseries.hpp
src/tempo/utils/: CMakeLists.txt  concepts.hpp  label_encoder.hpp  readingtools.hpp  simplecli.hpp  utils.cpp  utils.hpp
src/tempo/writer/: CMakeLists.txt
src/tempo/writer/ts/: ts.hpp
(+265 files in other folders)
